// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lists Access 1`] = `
Object {
  "index": Object {
    "kind": "literal",
    "type": "int",
    "value": 2,
  },
  "kind": "access",
  "target": Object {
    "kind": "identifier",
    "name": "myList",
  },
}
`;

exports[`Lists Access from function call result 1`] = `
Object {
  "index": Object {
    "kind": "literal",
    "type": "int",
    "value": 10,
  },
  "kind": "access",
  "target": Object {
    "arguments": Array [],
    "kind": "call",
    "target": Object {
      "kind": "identifier",
      "name": "myListFn",
    },
  },
}
`;

exports[`Lists Creation of custom type (irrelvant) 1`] = `
Object {
  "identifier": "myType",
  "kind": "let",
  "value": Object {
    "kind": "literal",
    "type": "type",
    "value": Object {
      "kind": "type",
      "origin": "builtin",
      "structure": Object {
        "a": Object {
          "kind": "type",
          "origin": "builtin",
          "type": "int",
        },
        "b": Object {
          "kind": "type",
          "origin": "builtin",
          "type": "str",
        },
      },
      "type": "obj",
    },
  },
}
`;

exports[`Lists Function returning list 1`] = `
Object {
  "identifier": "myListFn",
  "kind": "let",
  "value": Object {
    "body": Array [
      Object {
        "kind": "return",
        "value": Object {
          "kind": "new",
          "target": Object {
            "kind": "type",
            "listType": Object {
              "kind": "type",
              "origin": "builtin",
              "type": "int",
            },
            "type": "list",
          },
        },
      },
    ],
    "kind": "literal",
    "parameters": Array [],
    "returns": Object {
      "kind": "type",
      "listType": Object {
        "kind": "type",
        "origin": "builtin",
        "type": "int",
      },
      "type": "list",
    },
    "type": "fn",
  },
}
`;

exports[`Lists Initialization from object list literal 1`] = `
Object {
  "identifier": "myTypeList2",
  "kind": "let",
  "value": Object {
    "kind": "literal",
    "type": "type",
    "value": Object {
      "kind": "type",
      "listType": Object {
        "kind": "type",
        "origin": "builtin",
        "structure": Object {
          "a": Object {
            "kind": "type",
            "origin": "builtin",
            "type": "int",
          },
          "b": Object {
            "kind": "type",
            "origin": "builtin",
            "type": "str",
          },
        },
        "type": "obj",
      },
      "type": "list",
    },
  },
}
`;

exports[`Lists Initialization with 'let' 1`] = `
Object {
  "identifier": "myList",
  "kind": "let",
  "value": Object {
    "kind": "new",
    "target": Object {
      "kind": "type",
      "listType": Object {
        "kind": "type",
        "origin": "builtin",
        "type": "int",
      },
      "type": "list",
    },
  },
}
`;

exports[`Lists Initialization with custom type 1`] = `
Object {
  "identifier": "myTypeList",
  "kind": "let",
  "value": Object {
    "kind": "new",
    "target": Object {
      "kind": "type",
      "listType": Object {
        "kind": "type",
        "name": "myType",
        "origin": "named",
      },
      "type": "list",
    },
  },
}
`;
